Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18844

Network Connection "State" does nothing while it's supposed to invoke ShowNetConnectionStatus

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.15-dev-5709-g504bf68-x86-gcc-lin-dbg

      reactos-livecd-0.4.15-dev-5612-g6b863f6-x86-gcc-lin-dbg
      reactos-livecd-0.4.15-dev-5613-g7a17c7d-x86-gcc-lin-dbg

      Guilty commit is https://github.com/reactos/reactos/commit/7a17c7d9adadf88eafc382d792771bea5fc412f8 by reactosfanboy  

      Attachments

        Issue Links

          Activity

            People

              reactosfanboy reactosfanboy
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: