[NETSHELL] Repair "Network Connection 'State' does nothing" CORE-18844

It regressed in master by 0.4.15-dev-5613-g 7a17c7d9adadf88eafc382d792771bea5fc412f8

It was the only place within the ros sources where message WM_SHOWSTATUSDLG
was sent also from code. And therefore the only one that needed to be updated as well.